# ReqRadar

./: .env.example  .gitignore  .pre-commit-config.yaml  .reqradar.yaml  .reqradar.yaml.example  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  opencode.json  package-lock.json  pyproject.toml  test_e2e.py  test_minimax_api.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 6b95a50161f0_add_mcp_access_keys_requirement_.py  (+12 more)
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: 00_PROJECT_POSITIONING.md  01_RESTUCTURE_OVERVIEW.md  02_SYSTEM_ARCHITECTURE.md  03_COGNITIVE_ASSET_MODEL.md  04_IMPLEMENTATION_ROADMAP.md  CHECKLIST.md  CODE_WIKI.md  DESIGN.md  MVP-1_BUG_LOG.md  README.md  REVIEW_CHECKLIST.md  V2_DATA_MIGRATION_PLAN.md  project-summary.md  release-workflow.md
frontend/: Dockerfile  README.md  TESTING_FRAMEWORK_REPORT.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
reqradar/: __init__.py
reqradar/kernel/: __init__.py  config_base.py  database.py  embedding.py  enums.py  exceptions.py  models.py  pyproject.toml  types.py
scripts/: build-package.sh  check_dependencies.py  deploy.ps1  deploy.sh  e2e_pdf_smoke.py  e2e_smoke.py
tests/: bug_records.md  conftest.py  factories.py  test_analysis_agent.py  test_analysis_runner_v2.py  test_chat_loader.py  test_chatback_api.py  test_chatback_service.py  test_cli_commands.py  test_cli_integration.py  test_code_parser.py  test_config.py  test_config_manager.py  test_context.py  test_context_pydantic.py  test_dimension.py  test_evidence.py  test_evidence_api.py  test_git_analyzer.py  test_image_loader.py  test_keyword_mapping.py  test_llm_client.py  test_llm_structured.py  test_loader_registry_integration.py  test_loaders.py  test_memory.py  test_memory_integration.py  test_memory_manager.py  test_new_models.py  test_paths.py  test_pending_changes.py  test_profile_api.py  test_project_api_v2.py  test_project_file_service.py  test_project_memory.py  test_project_profile.py  test_report.py  test_report_storage.py  test_report_templates_api.py  test_round1_integration.py  (+22 more)
v1/: .dockerignore  .reqradar.yaml.example  README.md  docker-compose.prod.yml  pyproject.toml
v1/alembic/: env.py
v1/alembic/versions/: 3d6bc67d6a24_add_memory_template_synonym_tables.py  6b1a18e9c17f_report_file_storage_add_path_columns.py  a1c2d3e4f5g6_drop_legacy_report_content_columns.py  b0c1d2e3f4g5_change_json_columns_to_json_type.py  c7d8e9f0a1b2_add_llm_call_logs_table.py  d4e5f6a7b8c9_add_source_type_source_url_remove_old_paths.py  fe250b61cf8f_initial_migration_with_config_tables.py
v1/docker/: entrypoint.sh
v1/src/reqradar/: __init__.py
v1/src/reqradar/agent/: __init__.py  analysis_agent.py  project_profile.py  requirement_preprocessor.py  runner.py
v1/src/reqradar/agent/prompts/: analysis_phase.py  memory_evolution.py
v1/src/reqradar/agent/tools/: base.py  get_contributors.py  get_dependencies.py  get_project_profile.py  get_terminology.py  registry.py  search_git_history.py  security.py
v1/src/reqradar/cli/: __init__.py  analyses.py  config.py  projects.py  requirements.py  utils.py
v1/src/reqradar/core/: __init__.py  context.py  exceptions.py
v1/src/reqradar/infrastructure/: config.py  logging.py  migrate_report_files.py  registry.py  template_loader.py
v1/src/reqradar/mcp/: auth.py  schemas.py
v1/src/reqradar/modules/: code_parser.py  git_analyzer.py  llm_client.py  memory.py  project_memory.py
v1/src/reqradar/modules/loaders/: __init__.py  chat_loader.py  text_loader.py
v1/src/reqradar/templates/: default_report.yaml  general_requirements.yaml  report.md.j2  tech_debt.yaml
v1/src/reqradar/web/: cli.py  database.py  dependencies.py  models.py  websocket.py
v1/src/reqradar/web/api/: analyses.py  auth.py  configs.py  mcp.py  projects.py  templates.py  users.py
v1/src/reqradar/web/middleware/: rate_limit.py
v1/src/reqradar/web/services/: analysis_runner.py  chatback_service.py  content_reader.py  project_store.py  version_service.py
v1/src/reqradar/web/static/: index.html
v1/src/reqradar/web/static/assets/: AnalysisList-EtQozJgt.js  AnalysisProgress-CF6lAoFm.js  AnalysisSubmit-c4xodUz8.js  ApiOutlined-G242ITx-.js  ArrowLeftOutlined-CY-5ZnV6.js  Dashboard-DY5O3yzp.js  DeleteOutlined-CfJx2JhZ.js  DownloadOutlined-t3m32J4b.js  EditOutlined-yVtL8W_d.js  FileTextOutlined-j3RykQoN.js  FolderOpenOutlined-CnPZAxdV.js  InboxOutlined-BdbkGvaZ.js  LLMConfig-eAHdpT13.js  LeftOutlined-B9uNPY7k.js  Login-B1iOTAAr.js  MCPSettings-dMotLC9Q.js  PlusOutlined-BOzpphH9.js  ProjectDetail-BATFUcGj.js  ProjectProfile-CiCVFvjh.js  Projects-DQ93a1MF.js  PurePanel-DHRWElt0.js  ReloadOutlined-DKG7eaTA.js  ReportView-C9kQjxV4.js  RequirementEdit-CLkhx0kh.js  RiskBadge-C2P5L8I6.js  SaveOutlined-CFgOG9ln.js  SearchOutlined-CyLW5a24.js  SendOutlined-B8juxV7E.js  SettingsPage-9ZW9497q.js  SyncOutlined-DaEEAcyv.js  SynonymManager-Ciik_mgi.js  TeamOutlined-C3qLb4zs.js  TemplateManager-C8zSVYwI.js  UploadOutlined-DW1BZAmr.js  UserManagement-D_sfgRS3.js  UserPreferences-DwN1m4ys.js  auth-C8802kB7.js  card-iFaO-WEo.js  checkbox-DqwTbx_R.js  client-CilNMYxN.js  (+31 more)
v1/tests/: __init__.py  factories.py
v1/tests/e2e/: test_health_profile.py  test_report_versioning_flow.py
v1/tests/helpers/: auth_helper.py  bug_recorder.py
v1/tests/integration/: conftest.py
v1/tests/integration/api/: test_auth_api.py  test_configs_api.py  test_reports_versions_api.py  test_requirements_api.py  test_synonyms_evidence_profile_api.py  test_templates_api.py  test_users_api.py
v1/tests/unit/: test_auth.py  test_exceptions.py  test_mcp_audit_service.py  test_mcp_context.py  test_mcp_schemas.py  test_mcp_tools.py  test_paths.py  test_project_file_service.py  test_report_storage.py  test_requirement_release_service.py  test_tool_call_tracker.py  test_web_exceptions.py
(+510 files in other folders)
