[tool.poetry]
name = "reqradar"
version = "0.8.0"
description = "需求透视 - 垂直领域需求分析 Agent"
readme = "README.md"
license = "MIT"
authors = ["easy <easy@example.com>"]
packages = [{ include = "reqradar", from = "src" }]
include = [{ path = "src/reqradar/web/static", format = ["sdist", "wheel"] }]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pyyaml = "^6.0.1"
pydantic = "^2.5.0"
structlog = "^24.1.0"
rich = "^13.7.0"
jinja2 = "^3.1.3"
chromadb = "^0.4.22"
sentence-transformers = "^2.3.1"
httpx = "^0.26.0"
gitpython = "^3.1.40"
numpy = "^1.26.0"
markitdown = {version = "^0.1.0", extras = ["pdf", "docx", "pptx", "xlsx"]}
litellm = "^1.80"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.18"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.0"
python-dotenv = "^1.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
aiosqlite = "^0.20.0"
alembic = "^1.14.0"
markdown = "^3.7"
email-validator = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.0"
ruff = "^0.1.14"
mypy = "^1.8.0"

[tool.poetry.scripts]
reqradar = "reqradar.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["reqradar"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["alembic/versions/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=reqradar --cov-report=term-missing --cov-report=html -q"

[tool.coverage.run]
source = ["src/reqradar"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
]
