[project]
name = "reqradar"
version = "2.0.0-alpha"
description = "ReqRadar V2 — 项目认知运行时系统"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

[project.optional-dependencies]
parsers = [
    "tree-sitter>=0.22",
    "tree-sitter-javascript>=0.22",
    "tree-sitter-typescript>=0.22",
    "tree-sitter-java>=0.22",
    "tree-sitter-go>=0.22",
]

# 本地开发：pip install -e reqradar/kernel
# 该命令自动安装 sqlalchemy + pydantic + aiosqlite（继承 kernel 的依赖）

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reqradar"]
exclude = ["reqradar/kernel"]

[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
lint.ignore = ["E501", "E402", "RUF001", "RUF002", "RUF003", "RUF012", "RUF013", "N818", "SIM102", "SIM114", "UP007"]
lint.isort.known-first-party = ["reqradar"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["reqradar"]
omit = ["v1/*", "tests/*"]
