[tool.poetry]
name = "reqradar"
version = "0.8.0"
description = "需求透视 - 垂直领域需求分析 Agent"
readme = "README.md"
license = "MIT"
authors = ["easy <easy@example.com>"]
homepage = "https://github.com/easy12138s/ReqRadar"
repository = "https://github.com/easy12138s/ReqRadar"
keywords = ["requirements-analysis", "agent", "llm", "react", "fastapi"]
packages = [{ include = "reqradar", from = "src" }]
include = [{ path = "src/reqradar/web/static", format = ["sdist", "wheel"] }]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pyyaml = "^6.0.1"
pydantic = "^2.5.0"
structlog = "^24.1.0"
rich = "^13.7.0"
jinja2 = "^3.1.3"
httpx = "^0.28.1"
gitpython = "^3.1.40"
litellm = "^1.80"
fastapi = {version = "^0.115", extras = ["standard"]}
uvicorn = {version = ">=0.35,<0.37", extras = ["standard"]}
starlette = ">=0.40,<0.47"
python-multipart = "^0.0.26"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.0"
python-dotenv = "^1.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
aiosqlite = "^0.20.0"
alembic = "^1.14.0"
markdown = "^3.7"
email-validator = "^2.3.0"
fastmcp = "^3.2.4"

# 向量索引可选依赖：poetry install -E vector
chromadb = {version = "^1.0", optional = true}
sentence-transformers = {version = "^2.3.1", optional = true}
onnxruntime = {version = ">=1.16", optional = true}
numpy = {version = "^2.1.0", optional = true}

# 文档解析可选依赖：poetry install -E document
markitdown = {version = "^0.1.0", extras = ["pdf", "docx", "pptx", "xlsx"], optional = true}

[tool.poetry.extras]
vector = ["chromadb", "sentence-transformers", "onnxruntime", "numpy"]
document = ["markitdown"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-timeout = "^2.2.0"
factory-boy = "^3.3.0"
faker = "^22.0.0"
black = "^24.1.0"
ruff = "^0.1.14"
mypy = "^1.8.0"

[tool.poetry.scripts]
reqradar = "reqradar.cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["reqradar"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["alembic/versions/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=reqradar --cov-report=term-missing --cov-report=html -q"
markers = [
    "e2e: End-to-end tests (mock or real)",
    "e2e_real: End-to-end tests requiring real LLM API key",
    "integration: Integration tests (DB, API, CLI)",
    "slow: Tests that take >10s",
]
filterwarnings = [
    "ignore::pytest.PytestUnknownMarkWarning",
]

[tool.coverage.run]
source = ["src/reqradar"]
omit = ["tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
]
