[project]
name = "reqradar-kernel"
version = "2.0.0-alpha"
description = "ReqRadar V2 最小共享内核 — 类型、枚举、异常、ORM、Protocol"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
embedding = [
    "onnxruntime>=1.16",
    "numpy>=1.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reqradar/kernel"]
